# serialport-adapters

./: Cargo.toml
examples/dynamixel-esp32/: Cargo.toml
src/: esp_hal.rs  lib.rs  ww_bear.rs
src/dynamixel2/: mod.rs
