[package]
edition      = "2024"
name         = "dynamixel-esp32"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "dynamixel-esp32"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { version = "1.0.0", features = ["defmt", "esp32s3", "unstable"] }


defmt                  = "1.0.1"
esp-bootloader-esp-idf = { version = "0.4.0", features = ["defmt", "esp32s3"] }

critical-section = "1.2.0"
esp-backtrace = { version = "0.18.1", features = [
  "defmt",
  "esp32s3",
  "panic-handler",
] }
esp-println = { version = "0.16.1", features = ["defmt-espflash", "esp32s3", "jtag-serial"], default-features = false}

serialport-adapters = {path = "../..", features = ["dynamixel2", "esp-hal", "esp32s3", "defmt"]}
dynamixel2 = {git = "https://github.com/omelia-iliffe/dynamixel2-rs", branch = "async", default-features = false}


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
